--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 
 @import "global/base";
+@import "global/btn";
 @import "global/slider";
 
 @import "blocks/page-header";
@@ -11,3 +12,4 @@
 @import "blocks/news";
 @import "blocks/reviews";
 @import "blocks/page-footer";
+@import "blocks/social-links";
