--- a/sass/blocks/news.scss
+++ b/sass/blocks/news.scss
@@ -1,90 +1,34 @@
 .news {
   background-color: #f8f5f2;
   color: #000;
-}
-
-.news__wrapper {
-  @include container;
-  padding-top: 75px;
-  padding-bottom: 25px;
   border-bottom: 1px solid #e5ddd5;
-    @media ($tablet-widths) {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      padding-top: 85px;
-    }
-    @media ($desktop-widths) {
-      padding-top: 120px;
-    }
 }
 
 .news__title {
-  text-align: center;
-  font-size: 30px;
-  line-height: 30px;
-  font-weight: bold;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
   margin: 0;
-  padding: 0;
-    @media ($tablet-widths) {
-      text-align: left;
-      width: 75%;
-      font-size: 40px;
-      line-height: 40px;
-    }
-    @media ($desktop-widths) {
-      padding-left: 7.3%;
-    }
 }
 
 .news__items {
   @include reset-list;
-  margin-top: 35px;
-    @media ($tablet-widths) {
-      order: 2;
-      display: flex;
-      margin-top: 50px;
-    }
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .news__item {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 20px;
-    &:first-child {
-      border-bottom: 1px solid #e5ddd5;
-    }
-    &:nth-child(n+3) {
-      display: none;
-    }
+  padding-left: 70px;
+  position: relative;
     p {
       margin: 0;
-      padding: 0;
-      padding-top: 20px;
-      width: 75%;
-    }
-    @media ($tablet-widths) {
-      width: 43.75%;
-      margin-right: 6.25%;
-      padding-bottom: 40px;
-      &:first-child {
-        border-bottom: none;
-      }
-    }
-    @media ($desktop-widths) {
-      width: 29.166%;
-      margin-right: 4.166%;
-      padding-bottom: 40px;
-        &:nth-child(n+3) {
-        display: flex;
-        }
     }
 }
 
 .news__date {
-  margin: 0;
-  padding: 0;
-  margin-top: 25px;
+  position: absolute;
+  left: 0;
+  top: 5px;
   width: 50px;
   height: 50px;
   background-color: #000;
@@ -100,12 +44,84 @@
     }
 }
 
-.news__to-all {
-  display: block;
-  text-align: center;
-  margin-top: 5px;
-    @media ($tablet-widths) {
-      order: 1;
-      margin: 0;
-    }
+@media ($mobile-widths-only) {
+  .news__wrapper {
+    @include container;
+    padding-top: 70px;
+    padding-bottom: 28px;
+  }
+
+  .news__title {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 35px;
+  }
+
+  .news__items {
+    margin: 0 6.25%;
+  }
+
+  .news__item {
+    margin-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #e5ddd5;
+      &:nth-child(n+2) {
+        border-bottom: none;
+      }
+      &:nth-child(n+3) {
+        display: none;
+      }
+  }
+
+  .news__to-all {
+    display: block;
+    margin: 0 6.25%;
+    margin-top: 5px;
+  }
+}
+
+@media ($tablet-widths) {
+  .news__wrapper {
+    @include container;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 95px;
+    padding-bottom: 40px;
+  }
+
+  .news__title {
+    font-size: 40px;
+  }
+
+  .news__items {
+    order: 1;
+    margin-top: 50px;
+  }
+
+  .news__item {
+    width: 43.75%;
+    margin-right: 6.25%;
+      &:nth-child(n+3) {
+        display: none;
+      }
+  }
+
+  .news__to-all {
+    width: 160px;
+  }
+}
+
+@media ($desktop-widths) {
+  .news__title {
+    margin-left: 70px;
+  }
+
+  .news__item {
+    width: 280px;
+    margin-right: 40px;
+      &:nth-child(n+3) {
+        display: block;
+      }
+  }
 }
