--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -44,9 +44,7 @@
 
 @media ($mobile-widths-only) {
   .stats__header {
-    min-width: 320px;
-    max-width: 360px;
-    margin: 0 auto;
+    @include container;
     text-align: center;
   }
 
@@ -69,15 +67,13 @@
   }
 
   .stats__items {
-    margin: 0 auto;
-    min-width: 320px;
-    max-width: 360px;
+    @include container;
   }
 
   .stats__row {
-    @include container;
     display: flex;
     justify-content: space-between;
+    padding: 0 6.25%;
   }
 
   .stats__cell {
@@ -85,18 +81,18 @@
   }
 
   .stats__value {
-    min-width: 60%;
+    width: 50%;
     font-size: 40px;
   }
 
   .stats__field {
+    width: 50%;
     text-align: right;
-    text-indent: 25px;
   }
 
   .stats__legend--bottom {
-    display: block;
     @include container;
+    display: block;
     text-align: center;
     color: rgba(255, 255, 255, 0.3);
     margin-top: 15px;
@@ -108,17 +104,15 @@
     @include container;
     background-color: #353535;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .stats__header {
     position: relative;
-    min-width: 640px;
-    max-width: 640px;
-    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-content: space-between;
+    min-height: 185px;
     margin-top: -185px;
       &::before {
         content: "";
@@ -132,37 +126,39 @@
   }
 
   .stats__slogan {
-    min-width: 320px;
-    max-width: 320px;
-    padding: 35px 42px 0px 42px;
+    width: 50%;
+    padding: 0 42px;
     font-size: 40px;
+    margin-top: 35px;
   }
 
   .stats__intro {
-    min-width: 320px;
-    max-width: 320px;
-    padding:  40px 75px 0px 30px;
+    width: 50%;
+    padding: 0 75px 0 30px;
     margin: 0;
+    margin-top: 40px;
   }
 
   .stats__legend--top {
-    width: 320px;
+    width: 100%;
     color: rgba(0, 0, 0, 0.4);
     padding: 0 42px;
-    margin-top: 12px;
     margin-bottom: 25px;
   }
 
   .stats__items {
-    min-width: 640px;
-    max-width: 640px;
-    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
   }
 
   .stats__row {
-    min-width: 320px;
+    width: 50%;
+  }
+
+  .stats__cell {
+    br {
+      display: none;
+    }
   }
 
   .stats__value {
@@ -182,18 +178,16 @@
   }
 }
 
-
 @media ($desktop-widths) {
   .stats {
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
+    flex-direction: row;
   }
 
   .stats__header {
-    min-width: 320px;
-    max-width: 320px;
-    margin: 0;
+    width: 33.333%;
+    flex-direction: column;
+    justify-content: space-between;
     margin-top: -160px;
       &::before {
         top: 22px;
@@ -201,21 +195,23 @@
   }
 
   .stats__slogan {
-    padding: 35px 42px 25px 42px;
+    width: 100%;
+    padding: 0 42px;
+    margin-top: 35px;
   }
 
   .stats__intro {
-    padding: 0 75px 0px 42px;
-    margin: 0;
+    width: 100%;
+    padding: 0 42px;
+    margin-top: 15px;
   }
 
   .stats__legend--top {
-    margin-top: 0px;
-    margin-bottom: 8px;
+    margin-bottom: 30px;
   }
 
   .stats__items {
-    margin: 0;
+    width: 66.666%;
     margin-top: -160px;
   }
 }
