--- a/sass/global/slider.scss
+++ b/sass/global/slider.scss
@@ -4,4 +4,26 @@
 
 .slider__toggles {
   text-align: center;
+  display: flex;
+  justify-content: space-around;
+  width: 126px;
+  margin: 0 auto;
+}
+
+.slider__toggle {
+  position: relative;
+  font-size: 0;
+  width: 14px;
+  height: 14px;
+  cursor: pointer;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 6px;
+      height: 6px;
+      border: 2px solid #858483;
+      transform: rotate(45deg);
+      left: 2px;
+      top: 2px;
+    }
 }
