--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -1,22 +1,13 @@
-// @mixin container {
-//   width: 280px;
-//   margin: 0 auto;
-//   padding: 0 20px;
-//     @media ($tablet-widths) {
-//       width: 640px;
-//     }
-//     @media ($desktop-widths) {
-//       width: 960px;
-//     }
-// }
-
 @mixin container {
-  padding: 0 6.25%;
+  min-width: 320px;
     @media ($tablet-widths) {
-      padding: 0 8.4%;
+      width: 83%;
+      min-width: 640px;
+      margin: 0 auto;
     }
     @media ($desktop-widths) {
-      padding: 0 10%;
+      min-width: 960px;
+      max-width: 960px;
     }
 }
 
