--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -37,25 +37,32 @@
     @include container;
     padding-top: 40px;
     padding-bottom: 12px;
+    padding: 40px 12.5% 12px 12.5%;
+  }
+
+  .advantages__items {
+    position: relative;
   }
 
   .advantages__item {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
     text-align: center;
-    margin: 0 12.5%;
+    min-width: 240px;
+    width: 100%;
+    min-height: 275px;
     margin-bottom: 30px;
     padding-top: 125px;
-      &:nth-child(n+2) {
-        display: none;
-      }
+    opacity: 0;
+    transform: translateX(-300%);
+    transition: 1.5s;
       &::before {
         left: 50%;
         transform: translateX(-50%);
         top: 0;
       }
-  }
-
-  .advantages__item-title {
-
   }
 }
 
