--- a/sass/blocks/news.scss
+++ b/sass/blocks/news.scss
@@ -22,6 +22,29 @@
   position: relative;
     p {
       margin: 0;
+      transition: 0.5s;
+    }
+}
+
+.news__link {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+    &:hover ~ p {
+      color: #826550;
+      text-decoration: underline;
+    }
+    &:active ~ p {
+      color: #6a4d38;
+    }
+    &:hover ~ .news__date {
+      background-color: #826550;
+    }
+    &:active ~ .news__date {
+      background-color: #6a4d38;
+      color: #a09187;
     }
 }
 
@@ -37,6 +60,7 @@
   font-size: 16px;
   line-height: 10px;
   padding: 5px 0;
+  transition: 0.5s;
     b {
       font-size: 30px;
       line-height: 30px;
