--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -31,6 +31,7 @@
 @media ($mobile-widths-only) {
   .advantages {
     background-color: #242424;
+    @include triangle-down(36px, #242424);
   }
 
   .advantages__wrapper {
@@ -38,6 +39,7 @@
     padding-top: 40px;
     padding-bottom: 12px;
     padding: 40px 12.5% 12px 12.5%;
+
   }
 
   .advantages__items {
@@ -57,7 +59,10 @@
     padding-top: 125px;
     opacity: 0;
     transform: translateX(-300%);
-    transition: 1.5s;
+    transition: transform 1.5s,
+                visibility 1.5s,
+                position 1.5s,
+                opacity 1.5s;
       &::before {
         left: 50%;
         transform: translateX(-50%);
@@ -69,6 +74,7 @@
 @media ($tablet-widths) {
   .advantages {
     background-color: #353535;
+    @include triangle-down(42px, #353535);
   }
 
   .advantages__wrapper {
@@ -100,6 +106,10 @@
 }
 
 @media ($desktop-widths) {
+  .advantages {
+    @include triangle-down(62px, #353535);
+  }
+
   .advantages__wrapper {
     padding-top: 78px;
     padding-bottom: 40px;
