--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -55,6 +55,7 @@
     position: absolute;
     right: 0;
     top: 0;
+
     width: 70px;
     height: 50px;
     font-size: 0;
@@ -62,6 +63,9 @@
     border: none;
     cursor: pointer;
     transition: 0.5s;
+
+
+
       &:hover {
         background-color: #624530;
       }
@@ -118,9 +122,10 @@
         box-shadow:
           0 8px 00 #fff,
           0 16px 00 #fff;
+        transition: background-color 0.5s, box-shadow 0.5s;
       }
       &:active::before {
-        transition: 0.5s;
+
         background-color: rgba(255, 255, 255, 0.3);
         box-shadow:
           0 8px 00 rgba(255, 255, 255, 0.3),
@@ -143,7 +148,7 @@
           height: 2px;
           background-color: #fff;
           box-shadow: none;
-          transition: 0.5s;
+          transition: background-color 0.5s;
         }
         &::before {
           transform: rotate(45deg);
@@ -180,6 +185,7 @@
       z-index: 10;
       height: 80vh;
       background-color: #6a4d38;
+      animation: menu-opened 0.5s;
         &::before {
           content: "";
           position: absolute;
@@ -211,6 +217,11 @@
       display: block;
       background-color: #6a4d38;
     }
+  }
+
+  @keyframes menu-opened {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0%); }
   }
 }
 
