--- a/sass/blocks/news.scss
+++ b/sass/blocks/news.scss
@@ -61,6 +61,17 @@
   line-height: 10px;
   padding: 5px 0;
   transition: 0.5s;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0px;
+      top: 50px;
+      width: 0;
+      height: 0;
+      border-left: 25px solid transparent;
+    	border-right: 25px solid transparent;
+    	border-top: 11px solid #000;
+    }
     b {
       font-size: 30px;
       line-height: 30px;
